Fix active button status from gallery image ,logo bg, and statix scrollbar

--- a/CoralSCOP-LAT/web/css/styles.css
+++ b/CoralSCOP-LAT/web/css/styles.css
@@ -1005,7 +1005,8 @@ button {
 
 .logo-blk {
   font-size: 24px;
-  background-color: var(--blue-blue500);
+  background: var(--blue-blue500) url("../images/logo-bg.png");
+  background-size: cover;
   height: 100%;
   display: flex;
   align-items: center;
