--- a/CoralSCOP-LAT/web/scss/_layout.scss
+++ b/CoralSCOP-LAT/web/scss/_layout.scss
@@ -101,7 +101,8 @@
 
 .logo-blk {
     font-size: 24px;
-    background-color: var(--blue-blue500);
+    background: var(--blue-blue500) url('../images/logo-bg.png');
+    background-size: cover;
     height: 100%;
     display: flex;
     align-items: center;
